add: Relational Database project - Celestial Bodies Database

--- a/DataVisualization/05_TreemapDiagram/index.html
+++ b/DataVisualization/05_TreemapDiagram/index.html
@@ -12,6 +12,7 @@
       <h1 id="title">Treemap Diagram</h1>
       <p id="description"></p>
 
+      <div class="tooltip"></div>
       <div id="tooltip" class="tooltip">tootlip</div>
       <div class="views">
         <button class="view-btn view-selected" id="games">Games</button>
