add: Data Visualization project - Treemap Diagram

--- a/DataVisualization/05_TreemapDiagram/index.html
+++ b/DataVisualization/05_TreemapDiagram/index.html
@@ -12,8 +12,7 @@
       <h1 id="title">Treemap Diagram</h1>
       <p id="description"></p>
 
-      <div class="tooltip"></div>
-      <div id="tooltip" class="tooltip">tootlip</div>
+      <div id="tooltip" class="tooltip"></div>
       <div class="views">
         <button class="view-btn view-selected" id="games">Games</button>
         <button class="view-btn" id="movies">Movies</button>
